Call client deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
           aws-region: us-east-1
 
       - name: Build and deploy
-        run: npm run deploy
+        run: npm run client:deploy
