--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflows/test.yml
+    uses: ./.github/workflows/unit-tests.yml
 
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     needs:
       - test
